fixed the alignment on the button

--- a/client/components/LandingE/LandingE.scss
+++ b/client/components/LandingE/LandingE.scss
@@ -11,30 +11,30 @@ $white: #fff;
   left: 0;
   right: 0;
   display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows:auto;
   position: absolute;
   margin: 0 auto;
   justify-items: center;
 }
 
+img {
+  vertical-align: middle;
+}
 h1 {
   color: $white;
   text-align: center;
   margin-top: 70px;
   letter-spacing: 3.1px;
-  font-size: 30px;
+  font-size: 48px;
 }
 
 .slack, .github {
   width: 369px;
   height: 75px;
   border-radius: 49.5px;
-  display: block;
 }
 
 .slack{
-  margin-top:20px;
+  margin-top:-15px;
 }
 
 .contribute {
@@ -48,6 +48,7 @@ h1 {
   letter-spacing: 2.4px;
   text-align: center;
   color: #000000;
+  padding-left: 10px;
 }
 
 .community {
@@ -60,5 +61,6 @@ h1 {
   line-height: normal;
   letter-spacing: 2.4px;
   text-align: left;
-  color: #000000
+  color: #000000;
+  padding-left: 10px;
 }
